# my-skills-manager

./: .gitignore  CLAUDE.md  README.md  justfile  pyproject.toml
docs/: ARCHITECTURE.md  CLI_SPEC.md  CONFIG_SPEC.md  PRODUCT_SPEC.md  USER_GUIDE.md
docs/superpowers/plans/: 2026-05-24-msm-mvp.md
docs/superpowers/specs/: 2026-05-24-msm-mvp-design.md
examples/profiles/: coding-project.yaml  obsidian-vault.yaml  office-work.yaml
msm/: __init__.py  __main__.py
msm/agents/: __init__.py  adapters.py  defaults.py
msm/cli/: app.py
msm/config/: io.py  models.py  paths.py  state.py
msm/core/: service.py
msm/deploy/: __init__.py  manager.py
msm/registry/: __init__.py  manager.py
tests/: conftest.py  test_agents.py  test_cli.py  test_config.py  test_core.py  test_deploy.py  test_registry.py
