[project]
name = "my-skills-manager"
version = "0.1.0"
description = "Portable AI coding environment manager"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "rich>=13.7",
    "typer>=0.12",
]

[project.scripts]
msm = "msm.cli.app:app"

[dependency-groups]
dev = [
    "pytest>=8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["msm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
